swagger error fixed
